# cealr

./: .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CurlUtil.cpp  LICENSE  Makefile  Properties.cpp  README.md  TBD.md  build-debug.sh  build-release.sh  cealr  cealr.cbp  cealr.cpp  cmake_install.cmake  example.yaml  pack.sh
Docker/: Dockerfile  build-image.sh
cmake/Modules/: FindGpgme.cmake
src/: CurlUtil.cpp  CurlUtil.h  OpenPgpSign.cpp  OpenPgpSign.h  Properties.cpp  Properties.h  base64.h  cealr.cpp  cealr.h  curl_util.cpp  curl_util.h  fileUtil.cpp  fileUtil.h  file_util.cpp  file_util.h  message_digest.cpp  message_digest.h  open_pgp.cpp  open_pgp.h  properties.cpp  properties.h  serialized_data_format.cpp  serialized_data_format.h  serialized_data_format.hpp  smart_stamp.cpp  smart_stamp.h
